--- a/styles/globals.css
+++ b/styles/globals.css
@@ -19,6 +19,23 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+.dropdown {
+  opacity: 0;              
+  visibility: hidden;      
+  transition: opacity 0.5s ease, visibility 0.5s ease; 
+  position: absolute;         
+  width: 150px;             
+  z-index: 10;                              
+  transform: translateY(-5px); 
+  pointer-events: none;  
+}
+
+.dropdown.open {
+  opacity: 1;                
+  visibility: visible;  
+  transform: translateY(0); 
+  pointer-events: auto; 
+}     
 
 @layer base {
   :root {
